# currency-ingestion

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
currency-ingestion/: Dockerfile  pyproject.toml  script_02.py
dags/: currency_dag.py
ingestion/: pipeline.py  source.py
scripts/: read_parquet.py
