[project]
name = "currency-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dlt[filesystem]==1.4.1",
    "pyarrow==15.0.2",
    "s3fs==2024.6.1",
    "boto3==1.34.144",
    "setuptools<71",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
]
